--- a/index.html
+++ b/index.html
@@ -6,10 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link  rel="stylesheet" href='style.css'>
-
-    <title>Template</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,500;0,700;0,900;1,100;1,900&display=swap" rel="stylesheet">
+    <title>Quote Generator</title>
 </head>
 <body>
+    <div class="quote-container" id="quote-container">
+        <div class="quote-text">
+            <i class="fas fa-quote-left"></i>
+            <span id="quote">
+                What you are is what you have been. What you'll be is what you do now.
+            </span>
+        </div>
+        <div class="quote-author">
+            <span id="author">Buddha</span>
+        </div>
+        <div class="button-container">
+            <button class="twitter-button" id="twitter" title="Tweet This!">
+               <i class="fab fa-twitter"></i> 
+            </button>
+            <button id="new-quote">New Quote</button>
+        </div>
+    </div>
+    <div class="loader" id="loader"></div>
     <script src="script.js"> </script>
 </body>
 </html>
